# Django_blog

./: .gitignore  pyproject.toml  start_daphne.sh
api/: urls.py
api/users/: __init__.py  apps.py  models.py  urls.py
apps/: urls.py
apps/accounts/: forms.py  models.py  serializers.py  urls.py  views.py
apps/article/: api.py  models.py
apps/mainapp/: views.py
apps/users/: apps.py  models.py  urls.py
config/: settings.py  urls.py
nodejs/: package-lock.json  package.json
nodejs/public/: index.html
nodejs/src/: index.js
nodejs/src/component/: article.js
nodejs/src/components/: Article.jsx  Navbar.jsx  navbar.js
nodejs/src/components/Aunf/: Aunf.jsx  Aunf.module.css
nodejs/src/components/Aunf/components/: Activation.jsx  Confirm.jsx  Login.jsx  RegisterUser.jsx  ResendActivation.jsx  ResetActivation.jsx
nodejs/src/components/Auth/: Auth.jsx
nodejs/src/components/Auth/components/: Activation.jsx  Confirm.jsx  Login.jsx  Logout.jsx  RegisterUser.jsx  ResendActivation.jsx  ResetActivation.jsx  ResetPassword.jsx  ResetPasswordConfirm.jsx
old_apps/accounts/: apps.py  forms.py  models.py  serializers.py  urls.py
templates/: base.html
templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  signup.html
templates/account/email/: base_message.txt  email_confirmation_message.txt  email_confirmation_subject.txt
templates/account/messages/: logged_in.txt
templates/forms/: addpage.html  static_form.html
